# Media-b-test

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dobranos/instories/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/domain/base/mapper/: BitmapOperationsNativeMapper.cpp  YuvNativeMapper.cpp
app/src/main/java/com/dobranos/instories/data/base/model/: Content.java  ImageContent.java  VideoContent.java
app/src/main/java/com/dobranos/instories/data/base/repository/: MemoryRepositoryImpl.java
app/src/main/java/com/dobranos/instories/domain/base/interactor/: StreamProcessor.java
app/src/main/java/com/dobranos/instories/domain/base/mapper/: BitmapOperationsMapper.java  Nv21Mapper.java  PointFMapper.java  YuvMapper.java  Yv12Mapper.java
app/src/main/java/com/dobranos/instories/presentation/base/: BaseFragmentPresenter.java  ContentChooserFragmentPresenter.java  ContentChooserFragmentView.java  ContentHolderPresenter.java  ContentHolderView.java  MainActivityPresenter.java  MainActivityView.java
app/src/main/java/com/dobranos/instories/view/base/ui/: App.java
app/src/main/res/drawable/: bg_dashed_border.xml  selector_transparent_to_primary.xml  selector_white_45_to_primary.xml
app/src/main/res/drawable-v21/: selector_transparent_to_primary.xml  selector_white_45_to_primary.xml
app/src/main/res/layout/: activity_main.xml  fragment_content_chooser.xml  view_content_holder.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/test/java/com/dobranos/instories/: ExampleUnitTest.java
(+39 files in other folders)
